--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@turf/turf": "^7.2.0",
     "better-sqlite3": "^8.7.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "dotenv": "^16.3.1"
   },
   "engines": {
     "node": ">=20.0.0"
