Auth update for terminus 0.30.0 with jwt api access

--- a/env.example
+++ b/env.example
@@ -4,8 +4,10 @@
 # Your Terminus server URL (e.g., https://your-terminus-server.com)
 TERMINUS_URL=https://your-terminus-server.com
 
-# Your device API key from Terminus
-DEVICE_API_KEY=your_device_api_key_here
+# Your Terminus user account credentials (required for 0.30.0+)
+# Create a user account via the Terminus web UI first
+TERMINUS_LOGIN=your_email@example.com
+TERMINUS_PASSWORD=your_password
 
 # Optional: Port for the web server (default: 3000)
 PORT=3000
