added optional bit depth

--- a/env.example
+++ b/env.example
@@ -9,5 +9,9 @@ TERMINUS_URL=https://your-terminus-server.com
 TERMINUS_LOGIN=your_email@example.com
 TERMINUS_PASSWORD=your_password
 
+# E-paper display bit depth (1=black/white, 2=4 gray levels, 3=8 gray levels)
+# Default: 1 for optimal e-paper performance
+TERMINUS_BIT_DEPTH=1
+
 # Optional: Port for the web server (default: 3000)
 PORT=3000
